Fix avatar shrinking before break into mobile layout

--- a/app/assets/stylesheets/partials/user-cover-image.css.scss
+++ b/app/assets/stylesheets/partials/user-cover-image.css.scss
@@ -189,7 +189,7 @@
     img {
       border-radius: 3px;
       box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-      max-width: 120px;
+      width: 109px;
     }
   }
 
